# pi-tag-detector

./: AbstractFiducialModel.h  CMakeLists.txt  FiducialDefines.h  FiducialModelPi.cpp  FiducialModelPi.h  FiducialPiParameters.h  ellipserefine.cpp  pitag-test.cpp
